--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -98,12 +98,16 @@ hr{
     border:solid 4px white;
     cursor:pointer;
 
-    &:hover{ 
-      border:solid 4px #323A45;
-    }
-
     &:nth-child(7n){
       margin-right:0px;
     }
   }
+  span{
+    display: block;
+    @include transition(all .2s ease-in-out);
+  }
 }
+.copied{
+  span{@include scale(1.5);}
+}
+.zeroclipboard-is-hover{border:solid 4px #323A45 !important;}
